# llm_api_resilience

./: .env.example  README.md  pyproject.toml  pytest.ini
examples/: 00_judge_offline_demo.py  01_openai_api_safe_route.py  02_safe_route_demo.py  03_tool_session_failover_demo.py  README.md  api_config.py  circuit_breaker_observability.py  fake_llm.py  invalid_result_failover.py  multi_provider_tool_failover.py  production_hardening.py
src/llm_api_resilience/: __init__.py  attempts.py  capabilities.py  checkpoints.py  circuit_breaker.py  classifiers.py  errors.py  observability.py  policies.py  prompt_profiles.py  resilient_llm.py  responses.py  result_policies.py  routes.py  session.py  tool_journal.py
tests/e2e/: conftest.py  test_provider_chat.py
tests/integration/: test_public_adapter_failover.py  test_v05_contracts.py  test_v06_production_hardening.py
tests/unit/: test_attempts.py  test_capabilities.py  test_checkpoints.py  test_circuit_breaker.py  test_classifiers.py  test_observability.py  test_prompt_profiles.py  test_public_contract.py  test_resilient_llm.py  test_responses.py  test_result_failover.py  test_result_policies.py  test_route_prompt_profiles.py  test_routes.py  test_sessions.py  test_tool_journal.py
