[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-api-resilience"
version = "0.6.0"
description = "A resilient multi-provider LLM layer that automatically fails over to alternative models and providers when requests fail."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Sergey Inozemtsev"},
]
dependencies = [
    "llm-api-adapter>=0.5.0,<0.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
